# xAuth

./: README.md  test.py  xauth.go  xauth.js  xauth.py
csharp/: Program.cs  README.md  XAuth.cs  XAuth.csproj
golang/: README.md  go.mod  go.sum  test.go  xauth.go
java/: README.md  pom.xml
java/src/main/java/com/xauth/: XAuth.java  XAuthException.java  XAuthTest.java
javascript/: README.md  package-lock.json  package.json  test.js  xauth.js
php/: README.md  XAuth.php  test.php
python/: README.md  xauth.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs  main.rs
