[package]
name = "xauth"
version = "0.1.0"
edition = "2021"
description = "Twitter OAuth认证工具"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0" 